# rift

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  SUMMARY.md  Technical Specification for Psueco C  - RIFT is a  Flexible Translator .md  build.sh  cmake_install.cmake  macros.rf  main.c  rift  rift.toml
.claude/worktrees/elegant-rosalind/.claude/: settings.local.json
.claude/worktrees/elegant-rosalind/rift/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  Makefile  (+8 more)
POC/: choose  choose.c  rift_governance_validator.py  rift_poc.c  tokenziation  tokenziation.c
POC/gov/: .riftrc  .riftrc.gov  .riftrc.txt  Makefile  Makefile.old  Makefile.old.1  Makefile.old.3  README.md  gov-tree.txt  gov.optimizer.stage.riftrc.5  rift_governance_validator.c  schema.json  setup.sh
POC/gov/cli/: main.c
cmake/: options.cmake  platform.cmake
docs/: README.md  devto-article.md  pattern-matching.md
docs/TRANSCRIPTS/: I Built a Banking System That Talks COBOl.txt  NSIGII On the Fly Command and Control Sequence via RWX Verification.txt  NSIGII Spring Verify on the Chalk Board.txt  What is a Probing System and How does it Work.txt
docs/stage-0-tokenizer/: README.md  README_2.md  SUMMARY.md
docs/stage-2-ast/: README.md  README_1.md
examples/01_tokenization/: README.md  tokenziation  tokenziation.c
examples/02_poc_automaton/: README.md  rift_poc  rift_poc.c
examples/03_choose_pattern/: README.md  choose  choose.c
include/: rift_pipeline.h
include/rift/: bridge.h  cli.h  codec.h  codegen.h  emitter.h  lexer.h  memory.h  parser.h  pattern.h  platform.h  rift.h  semantic.h  token.h  version.h
nsigii-codec/: nsigii_codec.c  nsigii_codec.h
rift/: CTestTestfile.cmake  Makefile  USAGE.md  main.c
rift-000/: rift_000_tokenizer.c
rift-333/: rift_333_ast.c
rift-555/: rift_555_bridge.c  rift_555_bridge_cpp.cpp
rift/docs/TRANSCRIPTS/: Fitler and Flash Interdepe CISCO Se.txt  From Epsilon to Unity Matrix Conjug.txt  King EZE NSIGGI PROTOCOL How I Fought for OUR Human Rights.txt  NSIGII Encoding Suffering into Silicon Filter and Flash Sequence.txt  NSIGII Spring Physics Echo Verifier.txt  SymbolicIntreprationAICliiperDebugableCognition_9FEB2026.txt  Three Player Chess Why does my compute keep on.txt  WheelRRF 11FEB2026.txt
rift/examples/: hello.rf  hello.rift
rift/include/: rift_pipeline.h
rift/rift-001/: rift_001_process.c
rift/rift-444/: rift_444_target.c
rift/rift-555/: RiftBridge.cs  rift_555_bridge.c  rift_555_bridge.h
rift/stages/stage-0-tokenizer/: README_1.md
rift/stages/stage-1-parser/: README.md
rift/stages/stage-3-validator/: README.md  README_1.md
rift/stages/stage-4-bytecode/: README.md  README_1.md
rift/stages/stage-5-verifier/: README.md
rift/stages/stage-6-emitter/: README_1.md
riftbridge/: README.md  README2.md
riftbridge/r_open/: LICENSE.md  build.sh  ropen.c  ropen.cd
riftbridge/r_pkg/: main.c
riftbridge/rift/: README.md  quickstart.sh
riftbridge/rift/docs/: rift_tomography_guide.md
riftbridge/rift_pkg/: DISCLAIMER.md  README.md
riftbridge/rift_tomography/include/: trident.h
riftbridge/riftbridge_cfamily/include/: riftbridge.h
riftbridge/riftbridge_cfamily/src/: main.c  riftest.c
riftbridge/riftbridge_cfamily/test/: main.cpp  main.cs
riftlang/: Makefile  README.md  RIFTlang Codex.md  rift_codec.c  rift_codec.h  riftlang.c  riftlang.h
riftlang/TRANSCRIPT/GEOCALL 18 NOV/: Geo Call_otter_ai.txt
riftlang/TRANSCRIPT/MAIN/: 09DEC2025SPEECHNOTE_TOMOGRAPHCITWSGINFORSPACE.txt  BEINGTOBECOMING_27OV2025.txt  Bidirectioanl Learning Framwork with QA bounds_otter_ai.txt  Civil Uprising - When X Fails, Buil.txt  Frnakwis mosnter_otter_ai.txt  Governce with Biologiy Sustianbelity _otter_ai (1).txt  Introduuion to DGT incompelte todya 13 nov 2025.txt  LIVE FIRST WORK NEXT.txt  Neurospark brain computing interface via 7x7 Matrix for Kimentic and Inverse Kime ntic Verb Noun DAG 30 OCT 2025.txt  OBINexus_MY_RETURNTOOBI_27NOV2025TRANSCENDING_OPERATION_ALINEOFCODEATATIME.txt  OCT102025_1733_2025_OPENSENORYSTILL.txt  ODTS.txt  Quatum-Classical fo r PHEBIT lIGTHIN BALL.txt  README.txt  TRANSCRIPT-STREAM-OF-CONSIONESS.txt  The Rebirth fo OBInexus.txt  The World First Constutional Use of the AURASEAL on obinexus github 7 NOV 2025.txt  bci.txt  captions.srt  captions.txt  dse.txt  gocall 2_otter_ai.txt  hum_otter_ai.txt  obinxus_biz.txt  persona devloepmntn 04 nov 2025.txt  persona devloepmntn 04 nov 2025_otter_ai.txt  zero knoeldge proof system .txt
riftlang/TRANSCRIPT/Mmuko Suites/: mmuko_otter_ai.txt
riftlang/TRANSCRIPT/ONION Governaance/: ONION_otter_ai.txt
riftlang/TRANSCRIPT/SEALED 17 NOV/: Data Request and Case Closure_otter_ai.txt  captions.srt
riftlang/TRANSCRIPT/auraseal/: Auraseal1nov0205 youtbe vido palyet trancitp.txt
riftlang/TRANSCRIPT/human-rights-social/: Human Rights Claim 2014 - Nnamdi Michael Okpala 2014 VIOLATION 360 M.txt
riftlang/TRANSCRIPT/jagganut/: Biological Informatics Presentation_otter_ai.txt
riftlang/TRANSCRIPT/nov-17-2025-obinexus-reform/: Govvernce Modle via OBINexus_otter_ai.txt
riftlang/TRANSCRIPT/spirit-anchor-and-masquarade-16NOV2025/: Spiritual Anchor Initiative_otter_ai.txt
riftlang/docs/marked-down/: gossip-language-governance.md  import-enforcement-guide.md  rift-7-hardware-deployment.md  rift-bridge-governance-relay.md
riftlang/examples/counter/: counter.rift
riftlang/rifters_way/: README.md
src/bridge/: bridge.c  ropen.c  trident.c
src/cli/: cmd_bridge.c  cmd_compile.c  cmd_doctor.c  cmd_emit.c  cmd_lang.c  cmd_man.c  cmd_parse.c  cmd_raf.c  cmd_test.c  cmd_tokenize.c  dispatch.c  main.c
src/codec/: codec.c
src/codec/targets/: emit_c.c  emit_hexdump.c
src/core/: memory.c  platform.c  rift.c  token.c
src/lang/: codegen.c  emitter.c  lexer.c  parser.c  pattern.c  semantic.c  validator.c
src/raf/: raf.c
stages/stage-1-parser/: README_1.md
stages/stage-1-parser/specifications/: README.md
stages/stage-6-emitter/: README.md
tests/: CMakeLists.txt  test_cli.c  test_codec.c  test_lexer.c  test_rift.c  test_token.c
(+72 files in other folders)
